src/objects/Renewal_Task_Change_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>50% upon signature, 50% upon completion</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Monthly	Not Checked</fullName>
                </value>
                <value>
                    <fullName>Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Once</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloned_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloned Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewal Task Change Details</relationshipLabel>
        <relationshipName>Renewal_Task_Change_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Month_End__c</fullName>
        <label>Data Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Month_Start__c</fullName>
        <label>Data Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Media__c</fullName>
        <label>Delivery Media</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>CD Local</fullName>
                </value>
                <value>
                    <fullName>CD Masa</fullName>
                </value>
                <value>
                    <fullName>Diskette</fullName>
                </value>
                <value>
                    <fullName>E-Mail/Internet</fullName>
                </value>
                <value>
                    <fullName>File Express (FTP)</fullName>
                </value>
                <value>
                    <fullName>FTP Local</fullName>
                </value>
                <value>
                    <fullName>FTP Masa</fullName>
                </value>
                <value>
                    <fullName>Hard Copy</fullName>
                </value>
                <value>
                    <fullName>Optical Disk</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Tape</fullName>
                </value>
                <value>
                    <fullName>Training - Instructor-led</fullName>
                </value>
                <value>
                    <fullName>Training - WebEx</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dropped_Reason__c</fullName>
        <description>Reason if the product is being dropped from opportunity cloning.</description>
        <label>Dropped Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competition</fullName>
                </value>
                <value>
                    <fullName>Lost not to Competition</fullName>
                </value>
                <value>
                    <fullName>Market drops / frequency downgrades</fullName>
                </value>
                <value>
                    <fullName>Merger Impact</fullName>
                </value>
                <value>
                    <fullName>Product switch out</fullName>
                </value>
                <value>
                    <fullName>IMS no longer Delivers service</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Loss of Exclusivity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expect_Round_up_Total_Price__c</fullName>
        <label>Expect Round up Total Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New__c</fullName>
        <label>New</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Switch-In</fullName>
                </value>
                <value>
                    <fullName>New Product</fullName>
                </value>
                <value>
                    <fullName>Opportunity Merge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Line_Item_Id__c</fullName>
        <description>Field to hold the opportunity line item id of the original opportunity line item to be renewed.</description>
        <label>Opportunity Line Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Output_Format__c</fullName>
        <label>Output Format</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASCII</fullName>
                </value>
                <value>
                    <fullName>AuditViewer</fullName>
                </value>
                <value>
                    <fullName>Basics</fullName>
                </value>
                <value>
                    <fullName>Cognos</fullName>
                </value>
                <value>
                    <fullName>CSV</fullName>
                </value>
                <value>
                    <fullName>DataView</fullName>
                </value>
                <value>
                    <fullName>EasyView</fullName>
                </value>
                <value>
                    <fullName>MDB</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>PivotTable</fullName>
                </value>
                <value>
                    <fullName>Sales Analyzer</fullName>
                </value>
                <value>
                    <fullName>TerritoryPlanner</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Xcelcius</fullName>
                </value>
                <value>
                    <fullName>XLS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Contract_Value__c</fullName>
        <label>Previous Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Amount__c</fullName>
        <description>Field to be used for Revenue Dynamics purpose.</description>
        <label>Price – Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Discount__c</fullName>
        <description>For Revenue Dynamics Analysis of renewed products.</description>
        <label>Price Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Reason__c</fullName>
        <description>Field to be used for Revenue Dynamics purpose.</description>
        <label>Price – Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price Increase</fullName>
                </value>
                <value>
                    <fullName>Price Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>ProductCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Invoice_Text__c</fullName>
        <label>Product Invoice Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proj_Rpt_Frequency__c</fullName>
        <label>Delivery/Rpt Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Once</fullName>
                </value>
                <value>
                    <fullName>Weekly Data - Weekly Delivery [WW]</fullName>
                </value>
                <value>
                    <fullName>Weekly Data - Monthly Delivery [WM]</fullName>
                </value>
                <value>
                    <fullName>Monthly Data - Monthly Delivery [MM]</fullName>
                </value>
                <value>
                    <fullName>Monthly data - Bi-Monthly delivery [MB]</fullName>
                </value>
                <value>
                    <fullName>First month - Bi-Monthly delivery [1B]</fullName>
                </value>
                <value>
                    <fullName>Second month - Bi-Monthly delivery [2B]</fullName>
                </value>
                <value>
                    <fullName>Monthly Data - Quarterly Delivery [MQ]</fullName>
                </value>
                <value>
                    <fullName>Quarterly Data - Quarterly Delivery [QQ]</fullName>
                </value>
                <value>
                    <fullName>First month - Quarterly delivery [1Q]</fullName>
                </value>
                <value>
                    <fullName>Second month - Quarterly delivery [2Q]</fullName>
                </value>
                <value>
                    <fullName>Third month - Quarterly delivery [3Q]</fullName>
                </value>
                <value>
                    <fullName>Monthly Data - Half Yearly Delivery [MH]</fullName>
                </value>
                <value>
                    <fullName>Quarterly Data - Half Yearly Delivery [QH]</fullName>
                </value>
                <value>
                    <fullName>Half Yearly Data - Half Yearly Delivery [HH]</fullName>
                </value>
                <value>
                    <fullName>Monthly Data - Yearly Delivery [MY]</fullName>
                </value>
                <value>
                    <fullName>Quarterly Data - Yearly Delivery [QY]</fullName>
                </value>
                <value>
                    <fullName>Half Yearly Data - Yearly Delivery [HY]</fullName>
                </value>
                <value>
                    <fullName>Yearly Data - Yearly Delivery [YY]</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Task__c</fullName>
        <label>Renewal Task</label>
        <referenceTo>Renewal_Task__c</referenceTo>
        <relationshipLabel>Renewal Task Change Details</relationshipLabel>
        <relationshipName>Renewal_Task_Change_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ad-hoc</fullName>
                </value>
                <value>
                    <fullName>Subscription / Regular</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sale_Type__c</fullName>
        <label>Sale Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Repeat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Delivery Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>APAC Regiona</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>ASEAN Region</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific Contingency (1H)</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Congo</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republ</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Dropped</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unaccounted_Change__c</fullName>
        <formula>Year_on_Year_Change__c - ( Price_Amount__c + Volume_Amount__c - Price_Discount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unaccounted Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Volume_Amount__c</fullName>
        <description>For Revenue Dynamics Analysis of renewed products.</description>
        <label>Volume – Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Volume_Reason__c</fullName>
        <description>For Revenue Dynamics Analysis of renewed products.</description>
        <label>Volume – Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LOE-Direct</fullName>
                </value>
                <value>
                    <fullName>LOE-Indirect</fullName>
                </value>
                <value>
                    <fullName>Market adds / frequency upgrades</fullName>
                </value>
                <value>
                    <fullName>Market drops / frequency downgrades</fullName>
                </value>
                <value>
                    <fullName>Merger</fullName>
                </value>
                <value>
                    <fullName>Product Switch In</fullName>
                </value>
                <value>
                    <fullName>Product Switch Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Winback__c</fullName>
        <label>Winback</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes - from competitor</fullName>
                </value>
                <value>
                    <fullName>Yes - non competitive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_on_Year_Change__c</fullName>
        <label>Year on Year Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Renewal Task Change Detail</label>
    <nameField>
        <label>Renewal Task Change Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renewal Task Change Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DATA_PERIOD_DATES_Rule</fullName>
        <active>true</active>
        <description>Data period End Date must be greater than Data Period Start Date</description>
        <errorConditionFormula>Data_Month_End__c &lt; Data_Month_Start__c</errorConditionFormula>
        <errorMessage>Data period End Date must be greater than Data Period Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VolumeReason</fullName>
        <active>true</active>
        <description>VolumeReason should be given when volumne amount !=0</description>
        <errorConditionFormula>Volume_Amount__c !=0 &amp;&amp; ( ISPICKVAL(Volume_Reason__c,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Volume_Reason__c</errorDisplayField>
        <errorMessage>volume reason to be selected when volume amount ! =0</errorMessage>
    </validationRules>
</CustomObject>